// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toggle.svelte > should change class 1`] = `
<body>
  <div>
    <toggle
      aria-checked="false"
      aria-disabled="false"
      aria-label="Toggle"
      class="switch border border-neutral-300 custom"
      role="switch"
      tabindex="0"
    >
       
      <p>
        false
      </p>
      
    </toggle>
  </div>
</body>
`;

exports[`Toggle.svelte > should render default 1`] = `
<body>
  <div>
    <toggle
      aria-checked="false"
      aria-disabled="false"
      aria-label="Toggle"
      class="switch border border-neutral-300 "
      role="switch"
      tabindex="0"
    >
       
      <p>
        false
      </p>
      
    </toggle>
  </div>
</body>
`;
